<resources>
    <string name="app_name">Fummy</string>

    <string name="new_password_min_4_characters">New Password(Min. 4 characters)</string>
    <string name="otp_4_characters">OTP (4 characters)</string>
    <string name="enter_the_received_otp_below">Enter the received OTP below</string>

    <string name="submit">Submit</string>
    <string name="sign_in">SIGN IN</string>
    <string name="your_password">Your Password</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="don_t_have_account_sign_up_for_free">Don\'t have account? Sign Up For Free</string>
    <string name="enter_your_registered_mobile_number_and_email_below">Enter your Registered mobile number and email below:</string>
    <string name="enter_your_mobile_number">Enter Your Mobile Number</string>
    <string name="enter_your_email_address">Enter Your Email Address</string>
    <string name="next">Next</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="password_minimum_4_characters">Password (Minimum 4 characters)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="dashboard">Dashboard</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="favourite_restaurant">Favourite Restaurant</string>
    <string name="order_history">Order History</string>
    <string name="faqs">FAQs</string>
    <string name="log_out">Log Out</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="LogOut_fragment">Log Out Fragment</string>
    <string name="orderHistory_fragment">Order History Fragment</string>
    <string name="myProfile_Fragment">My Profile Fragment</string>
    <string name="favRestaurants_fragment">"Favourite Restaurant "</string>
    <string name="faqs_fragment">FAQs Fragment</string>
    <string name="shared_preferences">RestaurantPreferences</string>

</resources>
