<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="@string/home"
        android:id="@+id/home"
        android:icon="@drawable/ic_home" />

    <item
        android:title="@string/my_profile"
        android:id="@+id/myProfile"
        android:icon="@drawable/ic_my_profile"/>

    <item
        android:title="@string/favourite_restaurant"
        android:id="@+id/favRestaurant"
        android:icon="@drawable/ic_fav"/>

    <item
        android:title="@string/order_history"
        android:id="@+id/orderHistory"
        android:icon="@drawable/ic_history"/>

    <item
        android:title="@string/faqs"
        android:id="@+id/faq"
        android:icon="@drawable/ic_faq"/>

    <item
        android:title="@string/log_out"
        android:id="@+id/logOut"
        android:icon="@drawable/ic_logout"/>



</menu>