<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activity.Sign_In"
    android:background="@drawable/background2"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:layout_marginTop="200dp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"
        android:textColor="#000" />
    <EditText
        android:id="@+id/etMobileNo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/enter_your_mobile_number"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        android:textColorHint="#000000"
        android:inputType="number"
        android:maxLines="1"
        android:maxLength="10"
        android:background=" #ffffff"/>
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/your_password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColorHint="#000000"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        android:maxLines="1"
        android:background=" #ffffff"
        android:layout_below="@+id/etMobileNo"
        />
    <Button
        android:id="@+id/btnLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/log_in"
        android:background="#e60000"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor=" #ffffff"
        android:layout_below="@+id/etPassword"/>
    <TextView
        android:id="@+id/txtForgotPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor=" #000"
        android:layout_below="@+id/btnLogIn"
        android:gravity="center"/>
    <TextView
        android:id="@+id/txtNewAcc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="10dp"
        android:text="@string/don_t_have_account_sign_up_for_free"
        android:gravity="center"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="20sp"/>




</RelativeLayout>